--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-08-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/desktop-affine.cpp (sp_desktop_w2doc_affine,
+	sp_desktop_doc2w_affine, sp_desktop_doc2d_xy_point),
+	src/knotholder.cpp (knot_moved_handler), src/sp-item.cpp
+	(SPItem::getRelativeTransform), src/sp-rect.cpp
+	(sp_rect_set_transform), src/display/sp-canvas-util.cpp
+	(sp_canvas_item_i2i_affine, sp_canvas_item_set_i2w_affine):
+	  Cleanup: Use the new division operators instead of multiplication by
+	  inverse.  (Currently the division operators are implemented as
+	  multiplication by inverse.)
+
 	* src/splivarot.cpp, src/livarot/Shape.cpp, src/livarot/ShapeMisc.cpp,
 	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp:
 	  Hurriedly fix some problems caused by overly-hurried changes.
