--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-12  MenTaLguY  <mental@rydia.net>
+
+	* src/xml/repr-css.cpp, src/xml/repr-private.h,
+	  src/xml/repr.cpp, src/xml/repr.h:
+
+	  make SPRepr gc-aware
+
 2004-08-12  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/sp-chars.cpp src/sp-ellipse.cpp src/sp-flowtext.cpp
