--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-08-20  Carl Hetherington <inkscape@carlh.net>
 
-	* src/zoom-context.cpp, src/view.cpp: coding style cleanups.
+	* src/zoom-context.cpp, src/view.cpp, src/version.cpp: coding style cleanups.
 
 2004-08-18  Bryce Harrington <bryce@bryceharrington.com>
 
