--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-25  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/xml/repr-css.cpp (sp_repr_css_print):
+	  Fix for shared string change.
+
+	* src/sp-text.cpp: CodingStyle changes, including moving some
+	  declarations to first use.
+	  Remove unused __SP_TEXT_C__ define.
+
 2004-08-25  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/sp-cursor.cpp, src/sp-cursor.h, src/sp-guide.cpp:
