add void typedefs for unused argument positions
(bzr r3915)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-27  MenTaLguY <mental@rydia.net>
+
+	* src/traits/function.h: add typedefs for all argument positions,
+	  specifying 'void' for all arguments after the last
+
 2004-08-26  MenTaLguY <mental@rydia.net>
 
 	* src/document-private.h, src/document.h, src/document.cpp:
