--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-30  MenTaLguY <mental@rydia.net>
+
+	* src/sp-object.cpp:
+
+	  ref the object while SPObject::deleteObject runs, so it doesn't
+	  get destroyed halfway through [ fix for bug #1012874 ]
+
 2004-08-29  MenTaLguY <mental@rydia.net>
 
 	* src/gc-core.h:
