--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-02  MenTaLguY <mental@rydia.net>
+
+	* src/gc-core.h, src/gc-finalized.h, src/gc-anchored.h,
+	  src/libnr/nr-object.cpp:
+	  
+	  remove USE_LIBGC macro again
+
 2004-08-30  MenTaLguY <mental@rydia.net>
 
 	* src/sp-object.cpp:
