--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-08  Carl Hetherington <inkscape@carlh.net>
+
+	* src/helper/stock-items.cpp: fix a bad free().  Improve coding
+	style compliance.
+
+	* src/libnrtype/FlowRes.cpp: slightly unpleasant fix for a buffer
+	overrun.
+
 2004-09-07  MenTaLguY <mental@rydia.net>
 
 	* src/livarot/Shape.cpp, src/livarot/Shape.h, src/livarot/ShapeMisc.cpp,
