adding novalis and aubi
(bzr r4003)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-Alexander Clausen
 John Bintz
 Arpad Biro
 Daniel Borgmann
@@ -7,6 +6,7 @@ Bulia Byak
 Chema Celorio
 Johan Ceuppens
 Zbigniew Chyla
+Alexander Clausen
 John Cliff
 Kees Cook
 Robert Crosbie
@@ -29,6 +29,7 @@ Dmitry G. Mastrukov
 Michael Meeks
 Federico Mena
 MenTaLguY
+Aubanel MONNIER
 Peter Moulder
 Yukihiro Nakai
 Christian Neumair
@@ -38,5 +39,6 @@ Christian Schaller
 Tom von Schwerdtner
 Pat Suwalski
 Adib Taraben
+David Turner
 Daniel Yacob
 Masatake Yamato
