--- a/inkscape.pod
+++ b/inkscape.pod
@@ -1,7 +1,7 @@
 
 =head1 NAME
 
-Inkscape - a 2D Scalable Vector Graphics editing program.
+Inkscape - an SVG (Scalable Vector Graphics) vector editor.
 
 =head1 SYNOPSIS
 
@@ -10,37 +10,47 @@ C<inkscape [options] [filename ...]>
 options:
 
     -?, --help		
-    -a, --export-area=x0:y0:x1:y1     
-    -b, --export-background=COLOR     
-    -d, --export-dpi=DPI              
-    -e, --export-png=FILENAME         
-    -f, --file=FILENAME               
-    -h, --export-height=HEIGHT        
-    -i, --bitmap-icons                
-    -p, --print=FILENAME              
-    -s, --slideshow                   
-    -w, --export-width=WIDTH          
-    -x, --with-gui                    
-    -z, --without-gui                 
-        --export-svg=FILENAME             
         --usage       
+
+    -f, --file=FILENAME               
+    -s, --slideshow                   
+
+    -e, --export-png=FILENAME         
+    -a, --export-area=x0:y0:x1:y1     
+    -i, --export-id=ID     
+    -t, --export-use-hints
+    -b, --export-background=COLOR     
+    -y, --export-background-opacity=VALUE     
+    -d, --export-dpi=DPI              
+    -w, --export-width=WIDTH          
+    -h, --export-height=HEIGHT        
+
+    -l, --export-plain-svg=FILENAME             
+
+    -p, --print=PRINTER
+
+    -x, --bitmap-icons                
+
+    -g, --with-gui                    
+    -z, --without-gui                 
 
 =head1 DESCRIPTION
 
 B<Inkscape> is a GUI editor for B<Scalable Vector Graphics (SVG)> format
 drawing files, with capabilities similar to B<Adobe Illustrator>,
-B<CorelDraw>, B<Visio>, etc. Supported SVG features include basic
-shapes, paths, text, alpha blending, transforms, gradients, node
-editing, svg-to-png export, grouping, and more.  .  The interface is
+B<CorelDraw>, B<Visio>, etc. Inkscape features include versatile
+shapes, bezier paths, freehand drawing, multiline text, 
+alpha blending, transforms, gradients, node
+editing, SVG-to-PNG export, grouping, patterns, and more.  The interface is
 designed to be comfortable and efficient for skilled users, while
 remaining conformant to B<GNOME> standards so that users familiar with
 other GNOME applications can learn its interface rapidly.
 
-B<SVG> is a W3C standard XML format for 2D vector drawing, that allows
+B<SVG> is a W3C standard XML format for 2D vector drawing. It allows
 defining objects in the drawing using points, paths, and primitive
-shapes.  Colors, fonts, line thicknesses, and so forth are specified as
-'style' attributes to these objects.  The intent is that since SVG is a
-standard, and since its files are text/xml instead of binary, it is be
+shapes.  Colors, fonts, stroke width, and so forth are specified as
+`style' attributes to these objects.  The intent is that since SVG is a
+standard, and since its files are text/xml instead of binary, it will be
 possible to use SVG files in a sizeable number of programs and for a
 wide range of uses.
 
@@ -59,67 +69,88 @@ Show help message
 
 =item B<-a> I<x0:y0:x1:y1>, B<--export-area>=I<x0:y0:x1:y1>
 
-Exported area in millimeters (default is full document, 0,0 is
-lower-left corner)
+Exported area in SVG pixels (anonymous length units normally used in Inkscape SVG). The default is to export the entire document page. The 0,0 is
+the lower-left corner.
 
 =item B<-b> I<COLOR>, B<--export-background>=I<COLOR>
 
-Background color of exported bitmap (any SVG supported color string)
+Background color of exported PNG. This may be any SVG supported color string, for example "#ff007f" or "rgb(255, 0, 128)". If not set, the page color set in Inkscape in the Document Options dialog will be used (stored in the pagecolor= attribute of sodipodi:namedview).
 
 =item B<-d> I<DPI>, B<--export-dpi>=I<DPI>
 
-The resolution used for converting SVG into bitmap (default 72.0)
+The resolution used for bitmap export. The default is 72 which corresponds to 1 SVG pixel exporting to 1 bitmap pixel. This value overrides the DPI hint if used with --export-use-hints.
 
 =item B<-e> I<FILENAME>, B<--export-png>=I<FILENAME>
 
-Export document to png file
+Specify the filename for PNG export. If exists, the file will be overwritten without asking.
 
 =item B<-f> I<FILENAME>, B<--file>=I<FILENAME>
 
-Open specified document(s) (option string may be excluded)
+Open specified document(s). Option string may be omitted, i.e. you can list the filenames without -f.
+
+=item B<-g>, B<--with-gui>
+
+Try to use the GUI (on Unix, use the X server even if $DISPLAY is not set).
 
 =item B<-h> I<HEIGHT>, B<--export-height>=I<HEIGHT>
 
-The height of generated bitmap in pixels (overwrites dpi)
+The height of generated bitmap in pixels. This value overrides the --export-dpi setting (or the DPI hint if used with --export-use-hints). 
 
-=item B<-i>, B<--bitmap-icons>
+=item B<-i> I<ID>, B<--export-id>=I<ID>
 
-Prefer bitmap (xpm) icons to SVG ones
+The id attribute value of the object that you want to export from the document. Exported is the bounding box of the object, so with this option, --export-area is ignored. 
 
-=item B<-p> I<FILENAME>, B<--print>=I<FILENAME>
+=item B<-l>, B<--export-plain-svg>=I<FILENAME>
 
-Print document(s) to specified output file (use '| program' for pipe)
+Export document(s) to plain SVG format, without sodipodi: or inkscape: namespaces and without RDF metadata.
+
+=item B<-p> I<PRINTER>, B<--print>=I<PRINTER>
+
+Print document(s) to the specified printer using `lpr -P PRINTER'.
+Alternatively, use `| COMMAND' to specify a different command to pipe to,
+or use `> FILENAME' to write the PostScript output to a file instead of printing.
+Remember to do appropriate quoting for your shell, e.g.
+
+inkscape --print='| ps2pdf - mydoc.pdf' mydoc.svg
 
 =item B<-s>, B<--slideshow>
 
-Show given files one-by-one, switch to next on any key/mouse event
+Show given files one by one, switching to the next one by any key or mouse event.
+
+=item B<-t>, B<--export-use-hints>
+
+Use export filename and DPI hints stored in the exported object (only with --export-id). These hints are set automatically when you export selection from within Inkscape. So, for example, if you export a shape with id="path231" as /home/me/shape.png at 300 dpi from document.svg using Inkscape GUI and then save the document, later you will be able to reexport that shape to the same file with the same resolution simply with 
+
+inkscape -i path231 -t document.svg 
+
+If you use --export-dpi, --export-width, or --export-height with this option, the DPI hint will be ignored and the value from the command line will be used. If you use --export-png with this option, the filename hint will be ignored and the filename from the command line will be used. 
 
 =item B<-w> I<WIDTH>, B<--export-width>=I<WIDTH>
 
-The width of generated bitmap in pixels (overwrites dpi)
+The width of generated bitmap in pixels. This value overrides the --export-dpi setting (or the DPI hint if used with --export-use-hints). 
 
-=item B<-x>, B<--with-gui>
+=item B<-x>, B<--bitmap-icons>
 
-Try to use X server even if $DISPLAY is not set)
+Use bitmap (XPM) icons instead of SVG ones. By default, Inkscape raterizes icons on-the-fly 
+from share/inkscape/icons/icons.svg. Use this option to turn this off if there is any problem with SVG icons. 
+
+=item B<-y> I<VALUE>, B<--export-background-opacity>=I<VALUE>
+
+Opacity of the background of exported PNG. This may be a value either between 0.0 and 1.0 (0.0 meaning full transparency, 1.0 full opacity) or between 1 and 255 (255 meaning full opacity). If not set and the -b option is not used, the page opacity set in Inkscape in the Document Options dialog will be used (stored in the inkscape:pageopacity= attribute of sodipodi:namedview). If not set but the -b option is used, the value of 255 (full opacity) will be used. 
 
 =item B<-z>, B<--without-gui>
 
-Do not open GUI and do not use X server (only process files from console).
-Useful for printing SVG documents.
-
-=item B<--export-svg>=I<FILENAME>
-
-Export document to plain SVG file (no "xmlns:sodipodi" namespace)
+Do not open the GUI (on Unix, do not use X server); only process the files from console. This is assumed for -p, -e, and -l options. 
 
 =item B<--usage>
 
-Display brief usage message
+Display a brief usage message.
 
 =back
 
 =head1 KEYBINDINGS
 
-See keybindings.txt for a listing of keybindings.
+To get a complete list of keyboard and mouse shortcuts, view doc/keys.html, or use the Keys and Mouse command in Help menu from the GUI to see an SVG chart.
 
 =head1 CONFIGURATION
 
@@ -189,21 +220,18 @@ attributes that are not yet supported by the codebase.
 
 While obviously B<Inkscape> is primarily intended as a GUI application,
 it can be used for doing SVG processing on the commandline as well.
-(Note though that other SVG tools and libraries such as librsvg may be
-better suited for production SVG processing.)
 
-Printing an SVG file directly:
+Print an SVG file:
 
-    inkscape filename.svg -p | lpr
+    inkscape filename.svg -p '| lpr'
 
-Converting SVG file to a png:
+Export an SVG file into PNG:
 
-    inkscape --export-png=filename.png --export-height=400 --export-width=600
+    inkscape filename.svg --export-png=filename.png -w600 -h400
 
-Convert an SVG document using items in the sodipodi namespace to plain
-SVG:  
+Convert an Inkscape SVG document to plain SVG:  
 
-    inkscape filename1.svg e --export-svg=filename2.svg
+    inkscape filename1.svg --export-plain-svg=filename2.svg
 
 =head1 ENVIRONMENT
 
@@ -228,7 +256,7 @@ the latest released version of the program, and more.
 
 =head1 SEE ALSO
 
-gimp(1), autotrace, frontline, ill2svg, rsvg(1), xfig(1), sodipodi,
+gimp(1), autotrace, potrace, frontline, ill2svg, rsvg(1), xfig(1), sodipodi,
 karbon14, dia(1X), batik.
 
 SVG compliance test suite:  http://www.w3.org/Graphics/SVG/Test/
@@ -254,42 +282,41 @@ L<http://www.w3.org/TR/DOM-Level-2-Core/>
 
 =head1 NOTES
 
-Ctrl & Shift modify dragging behaviour in some modes
+Ctrl, Shift, Alt modify dragging and clicking behaviour in most tools. Watch the statusbar
+for helpful hints.
 
-Shift click/rubberband usually toggles selection
+To rotate an object, click it to select with Selector tool, then click again to enable
+rotation handles.
 
-Snapping to guidelines/grid work only for certain modes
+The Import command works with most bitmap formats (PNG, BMP, JPG, XPM, GIF etc.) and SVG
+vector images. The Open command can handle only SVG files.
 
-To break line (or add node) select its endpoints
+The Export command only exports bitmaps in PNG format. To export into PS, EPS and other
+vector formats, use Save As.
 
-It should import png, bmp, jpg, xpm & gif bitmaps and svg vector images.
-
-Open can handle only svg graphics
-
-Wacom tablets do work with Inkscape if they are configured to act as
-regular pointing devices.
+A Wacom tablet will work with Inkscape if it is configured to act as a regular pointing
+device. We do not support pressure/tilt sensitivity or any tablet-specific
+features yet.
 
 It works "out of the box" with Apple's X server, but with XFree86 you
 will need to have the "SendCoreEvents" option turned on if you do not
 already.  It does not seem to work as well under Windows.
 
-Note that we do not support pressure/tilt sensitivity or any
-tablet-specific features yet.
-
 
 =head1 BUGS
 
 Many bugs are known; please refer to the website for reviewing the
-reported ones and to report newly found issues.  For bugs that cannot be
-easily fixed, here are the workarounds:
+reported ones and to report newly found issues.  Here are some workarounds:
 
 When importing svg generated with ill2svg, all paths are usually grouped.
 Ungroup these manually.
 
 If you use gradients and stretch the icon of the saved file in Nautilus,
 you'll notice that the gradients don't render right.  This is a
-well-known problem in Nautilus/rsvg and can be worked around by
+well-known problem in Nautilus/RSVG and can be worked around by
 specifying the gradient as 'userspaceinuse' in the gradient editor.
+
+See also the Known Issues section in the Release Notes for your version (file `NEWS').
 
 =head1 AUTHORS
 
@@ -301,29 +328,28 @@ application sits:
 [% INCLUDE "AUTHORS" %]
 
 This man page was put together by Bryce Harrington
-E<lt>brycehar@bryceharrington.comE<gt>
+E<lt>brycehar@bryceharrington.comE<gt>.
 
 =head1 HISTORY
 
 The codebase that would become Inkscape began life in 1999 as the
-program 'GILL', the GNOME Illustrator application, created by Raph
+program Gill, the GNOME Illustrator application, created by Raph
 Levien.  The stated objective for Gill was to eventually support all of
 SVG.  Raph implemented the PostScript bezier imaging model, including
 stroking and filling, line cap style, line join style, text, etc.  
 Raph's Gill page is at http://www.levien.com/svg/.  Work on Gill appears
-to have slowed or ceased in 2000, perhaps in part due to frustrations
-dealing with implementing DOM and SVG.
+to have slowed or ceased in 2000.
 
 The next incarnation of the codebase was to become the highly popular
-program Sodipodi, led by Lauris Kaplinkski.  The codebase was turned
-into a very usable illustration program over the course of several
+program Sodipodi, led by Lauris Kaplinski.  The codebase was turned
+into a powerful illustration program over the course of several
 year's work, adding several new features, multi-lingual support, porting
 to Windows and other operating systems, and eliminating dependencies.
 
 Inkscape was formed in 2003 by four active Sodipodi developers, Bryce
-harrington, MenTaLguY, Nathan Hurst, and Ted Gould, wanting to take a
+Harrington, MenTaLguY, Nathan Hurst, and Ted Gould, wanting to take a
 different direction with the codebase in terms of focus on
-SVG-compliance, interface look-and-feel, and a desire to open
+SVG compliance, interface look-and-feel, and a desire to open
 development opportunities to more participants.  
 
 =head1 COPYRIGHT AND LICENSE
