--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2004-09-09  Carl Hetherington <inkscape@carlh.net>
+
+	* src/sp-flowtext.cpp, src/sp-offset.cpp, src/splivarot.cpp,
+	src/display/nr-arena-shape.cpp, src/libnrtype/FlowDest.cpp,
+	src/livarot/PathConversion.cpp, src/livarot/Shape.h: make
+	Shape::nbPt and Shape::nbAr private and provide accessor methods.
+
+	* src/display/nr-arena-shape.cpp, src/livarot/Shape.h: make
+	Shape::flags private.
+
+	* src/splivarot.cpp, src/livarot/PathStroke.cpp,
+	src/livarot/Shape.cpp, src/livarot/Shape.h, src/livarot/ShapeMisc.cpp,
+	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp:
+	Clean up handling of flags in Shape class
+
+	* src/livarot/AlphaLigne.cpp, src/livarot/Path.cpp,
+	src/livarot/PathSimplify.cpp, src/livarot/Shape.cpp,
+	src/livarot/ShapeSweepUtils.cpp: it's ok to free NULL.
+
 2004-09-08  MenTaLguY  <mental@rydia.net>
 
 	* src/libnr/nr-object.h, src/libnr/nr-object.cpp: fix NRObject
